--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-    
+   
+    <div id="travelgem-container">
+
+    </div>
+
+
 </body>
 </html>
