add render function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="form-container">
 
-        <form id="create-travelgem-form" style="">
+        <form id="create-Travelgem-form">
           <h3>Create a Travel Gem!</h3>
       
           <input id='input-title' type="text" name="title" value="" placeholder="Enter your travel gem name..." class="input-text">
