build new class - travelgem

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="src/travelgem.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
+    
 </head>
 <body>
    
@@ -11,7 +13,7 @@
 
     <div class="form-container">
 
-        <form id="create-Travelgem-form">
+        <form id="create-travelgem-form">
           <h3>Create a Travel Gem!</h3>
       
           <input id='input-title' type="text" name="title" value="" placeholder="Enter your travel gem name..." class="input-text">
