change button from blue to white

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <option value="8">USA</option>
           </select>
         </div>
-      <button id="create-button" type="submit" class="btn btn-primary">Create New Travel</button>
+      <button id="create-button" type="submit" class="btn btn-light">Create New Travel Gem</button>
       
   </form>
 </div>
