insert welcome card for homepage and its text style and position.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,21 @@
 
 <main role="main">
 
-  <section class="jumbotron text-center">
-    <div class="container">  
+<!-- the title card of the website -->
+  <div class="card bg-dark text-white">   
+    <div class="card-img-overlay">
+      <h5 class="card-title">Welcome to Travel Jam</h5>
+      <p class="card-text">Store All Your Travel Gems Right Here!</p>
+      <p class="card-text">~ Past and Future Spots ~</p>
+    </div>
+  </div>
+<!-- ends here -->
+
+<section class="jumbotron text-center">
+  <br><br>
+  <div class="container">  
+
+
       <form id="create-travelgem-form">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
