this commit fix the layout bug of all the travel gem cards in homepage git add .

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 
 
   <div class="album py-5 bg-light">
-    <div class="container" id='travelgem-container'>
+    <div class="card-group" id="travelgem-container">
 
-      <div class="row">
+      <div class="">
         
         
       </div>
