--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="card-img-overlay">
       <h1 class="card-title">Welcome to Travel Jam</h1>
       <p class="card-text">Store All Your Travel Gems Right Here!</p>
-      <p class="card-text">~ Past and Future Spots ~</p>
+      <p class="card-text">~ Past and Future Sweet Spots ~</p>
     </div>
   </div>
 <!-- ends here -->
