--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
 
 <main role="main">
 
+
+  <!--   TAO QUESTION  -->  
+<div id="user-comments" >
+
+
+</div>
+
+<form id="user-comments-form">
+  <input type="text" name="comments">
+  <input type="submit">
+</form>
+
+
 <!-- the title card of the website -->
   <div class="card bg-dark text-white">   
     <div class="card-img-overlay">
